[tool.poetry]
name = "wiki-lang-graph"
version = "0.1.0"
description = "Wikipedia language graph analyser"
authors = ["Paweł Lis <lispawel24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Wikipedia-API = "^0.5.4"
plotly = "^4.14.1"
dash = "^1.18.1"
networkx = "^2.5"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
