[tool.poetry]
name = "wiki-lang-graph"
version = "0.1.0"
description = "Wikipedia language graph analyser"
authors = ["Paweł Lis <lispawel24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bokeh = "^2.2.3"
networkx = "^2.5"
httpx = "^0.16.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
bandit = "*"
coverage = "*"
dlint = "*"
devtools = {extras = ["pygments"], version = "*"}
eradicate = "*"
flake8 = "*"
flake8-absolute-import = "*"
flake8-alfred = "*"
flake8-annotations = "*"
flake8-annotations-complexity = "*"
flake8-annotations-coverage = "*"
flake8-bandit = "*"
flake8-blind-except = "*"
flake8-broken-line = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-cognitive-complexity = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-eradicate = "*"
flake8-expression-complexity = "*"
flake8-functions = "*"
flake8-fixme = "*"
flake8-if-expr = "*"
flake8-isort = "*"
flake8-logging-format = "*"
flake8-markdown = "*"
flake8-mutable = "*"
flake8-mock = "*"
flake8-pep3101 = "*"
flake8-pie = "*"
flake8-print = "*"
flake8-pytest = "*"
flake8-pytest-style = "*"
flake8-quotes = "*"
flake8-return = "*"
flake8-rst = "*"
flake8-rst-docstrings = "*"
flake8-string-format = "*"
flake8-tidy-imports = "*"
flake8-tuple = "*"
flake8-type-annotations = "*"
flake8-use-fstring = "*"
flake8-variables-names = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pylama = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
pytest-factoryboy = "*"
pytest-faker = "*"
pytest-html = "*"
pytest-mock = "*"
pytest-pycharm = "*"
pytest-randomly = "*"
pytest-spark = "*"
pytest-sugar = "*"
pytest-watch = "*"
pytest-xdist = "*"
requests-mock = "*"
safety = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
